Fix unordered list spacing

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -443,3 +443,7 @@ Small Device Styles
 #err-log{
   margin-top:40px;
 }
+
+ul{
+  margin-top:0px;
+}
